pkg/main/default/objects/GenTemplate__c/fields/FileName__c.field-meta.xml
<CustomField>
	<fullName>FileName__c</fullName>
	<label>File Name</label>
	<description>Online Editor File Name</description>
	<length>255</length>
	<type>Text</type>
	<defaultValue></defaultValue>
</CustomField>