pkg/main/default/objects/GenTemplate__c/fields/FileSuffix__c.field-meta.xml
<CustomField>
	<fullName>FileSuffix__c</fullName>
	<label>File Suffix</label>
	<description>Online Editor File Suffix</description>
	<length>255</length>
	<type>Text</type>
	<defaultValue></defaultValue>
</CustomField>