pkg/main/default/objects/GenTemplate__c/fields/HasPreviewedDocuments__c.field-meta.xml
<CustomField>
    <fullName>HasPreviewedDocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Previewed Documents</label>
    <type>Checkbox</type>
</CustomField>