pkg/main/default/objects/GenTemplate__c/fields/IsSample__c.field-meta.xml
<CustomField>
    <fullName>IsSample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sample</label>
    <type>Checkbox</type>
</CustomField>