pkg/main/default/objects/GenTemplate__c/fields/ObjectMappings__c.field-meta.xml
<CustomField>
    <fullName>ObjectMappings__c</fullName>
    <label>Object Mappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>