pkg/main/default/objects/GenTemplate__c/fields/SignerMappings__c.field-meta.xml
<CustomField>
    <fullName>SignerMappings__c</fullName>
    <label>Signer Mappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>