pkg/main/default/objects/GenTemplate__c/fields/StepsCompleted__c.field-meta.xml
<CustomField>
    <fullName>StepsCompleted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Steps Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>