pkg/main/default/objects/GenTemplate__c/fields/TemplateId__c.field-meta.xml
<CustomField>
	<fullName>TemplateId__c</fullName>
	<externalId>true</externalId>
	<label>Template Id</label>
	<description>Online Editor Template Id</description>
	<length>255</length>
	<type>Text</type>
	<unique>true</unique>
</CustomField>