pkg/main/default/objects/GenTemplate__c/fields/TemplateType__c.field-meta.xml
<CustomField>
	<fullName>TemplateType__c</fullName>
	<description>Template Type</description>
	<label>Template Type</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>Online Editor</fullName>
				<label>DocuSign Agreement Cloud Editor</label>
			</value>
			<value>
				<fullName>Microsoft Word</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>