pkg/main/default/objects/GenTemplate__c/fields/UseAllTemplates__c.field-meta.xml
<CustomField>
    <fullName>UseAllTemplates__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use All Templates</label>
    <type>Checkbox</type>
</CustomField>