pkg/main/default/objects/GenTemplate__c/fields/UseCurrentRecord__c.field-meta.xml
<CustomField>
    <fullName>UseCurrentRecord__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Current Record</label>
    <type>Checkbox</type>
</CustomField>